Fix color contrast some more in privacy warning
Latest master appears to have changed the <strong> to this unreadable grey color. If you want that to be white then it should be pure white. If someone would rather revert this to that strong dark blue color it was before that would be good too.

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -236,7 +236,7 @@
   font-weight: 400;
 
   strong {
-    color: darken($primary-text-color, 33%);
+    color: $primary-text-color;
     font-weight: 500;
   }
 
